@@ -2,12 +2,7 @@
 # Copyright © 2003 Colin Walters <walters@debian.org>
 # Copyright © 2006 Marc Dequènes (Duck) <Duck@DuckCorp.org>
 #
-# Description: manage Python public modules build
-#   This class is designed to work with Python packages using the
-#   'distutils' build system and comply to the new policy established
-#   during summer 2006.  Use of the debhelper class to make use of the
-#   new dh_python is strongly advised.  (This is still left as optional
-#   in line with CDBS' flexible behavior.)
+# Description: manage Python modules using the 'distutils' build system
 #
 # This program is free software; you can redistribute it and/or
 # modify it under the terms of the GNU General Public License as
@@ -24,16 +19,6 @@
 # Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA
 # 02111-1307 USA.
 #
-
-# This class provides rules for old and new Python policy.  Leaving
-# DEB_PYTHON_SYSTEM unset selects the old behavior.  The pysupport and
-# pycentral methods are available to comply with new policy.  Don't forget
-# to update your 'debian/control'.  (Build-Depends are correctly generated
-# if you are using the auto control generation feature.)
-
-# Once all old-style packages are removed before etch, some of the old
-# can be refactored or removed.
-
 
 #PATH_RULES#
 
@@ -63,31 +48,15 @@ else
       cdbs_pycompat = 2
     endif # use pycompat
   else
-    ifneq (, $(DEB_PYTHON_SYSTEM))
-      $(error unsupported Python system: $(DEB_PYTHON_SYSTEM) (select either pysupport or pycentral))
-    else
-      ifneq (, $(cdbs_use_xs_field))
-        $(error package uses the new Python policy; DEB_PYTHON_SYSTEM must be set to "pysupport" or "pycentral")
-      endif
-      ifneq (, $(cdbs_selected_pycompat))
-        ifeq (yes, $(shell expr $(cdbs_selected_pycompat) \> 1 >/dev/null && echo yes))
-          $(error package uses the new Python policy; DEB_PYTHON_SYSTEM must be set to "pysupport" or "pycentral")
-        endif
-      endif # use pycompat
-    endif # unknown method
+    $(error unsupported Python system: $(DEB_PYTHON_SYSTEM) (select either pysupport or pycentral))
   endif # pycentral
 endif # pysupport
 
 
-ifndef DEB_PYTHON_SYSTEM
-DEB_PYTHON_COMPILE_VERSION = 
-DEB_PYTHON_VERSIONS = 2.1 2.2 2.3 2.4 2.5
-else
 # default package is the first one declared in 'debian/control'
 # (override if necessary)
 DEB_PYTHON_MODULE_PACKAGE = $(firstword $(filter-out %-doc %-dev %-common, $(DEB_PACKAGES)))
 DEB_PYTHON_PRIVATE_MODULES_DIRS =
-endif
 
 # common variables
 DEB_PYTHON_SETUP_CMD = setup.py
@@ -95,71 +64,6 @@ DEB_PYTHON_CLEAN_ARGS = -a
 DEB_PYTHON_BUILD_ARGS = --build-base="$(CURDIR)/$(DEB_BUILDDIR)/build"
 DEB_PYTHON_INSTALL_ARGS_ALL = --no-compile -O0
 
-
-ifndef DEB_PYTHON_SYSTEM
-########################### old policy method ###########################
-
-$(warning =======================================================)
-$(warning Your package does not conform to the new Python policy.)
-$(warning Please consider updating.  Here is some documentation:)
-$(warning   http://wiki.debian.org/DebianPython/NewPolicy)
-$(warning   http://wiki.debian.org/DebianPythonFAQ)
-$(warning =======================================================)
-
-# make: *** No rule to make target `voodoo'.  Stop.
-DEB_PYTHON_REAL_LIB_PACKAGES = $(strip $(filter $(patsubst %,python%%,$(DEB_PYTHON_VERSIONS)),$(filter-out $(DEB_PYTHON_PACKAGES_EXCLUDE),$(DEB_ALL_PACKAGES))))
-# If no versioned python library packages found, grab all simpler ones
-ifeq (,$(DEB_PYTHON_REAL_LIB_PACKAGES))
-DEB_PYTHON_SIMPLE_PACKAGES = $(strip $(filter python-%,$(filter-out $(DEB_PYTHON_PACKAGES_EXCLUDE),$(DEB_ALL_PACKAGES))))
-endif
-
-cdbs_python_ver = $(filter-out -%,$(subst -, -,$(patsubst python%,%,$(cdbs_curpkg))))
-
-common-build-arch common-build-indep:: common-build-impl
-common-build-impl::
-	cd $(DEB_SRCDIR) && python$(DEB_PYTHON_COMPILE_VERSION) $(DEB_PYTHON_SETUP_CMD) build $(DEB_PYTHON_BUILD_ARGS)
-
-
-# See if this package doesn't appear to need to be compiled by multiple
-# Python versions.
-ifeq (,$(DEB_PYTHON_REAL_LIB_PACKAGES))
-common-install-arch common-install-indep:: common-install-impl
-common-install-impl::
-	cd $(DEB_SRCDIR) && python$(DEB_PYTHON_COMPILE_VERSION) $(DEB_PYTHON_SETUP_CMD) install --root=$(DEB_DESTDIR) $(DEB_PYTHON_INSTALL_ARGS_ALL) $(DEB_PYTHON_INSTALL_ARGS_$(cdbs_curpkg))
-else
-$(patsubst %,install/%,$(DEB_PYTHON_REAL_LIB_PACKAGES)) :: install/% :
-	cd $(DEB_SRCDIR) && python$(cdbs_python_ver) $(DEB_PYTHON_SETUP_CMD) install --root=$(CURDIR)/debian/$(cdbs_curpkg) $(DEB_PYTHON_INSTALL_ARGS_ALL) $(DEB_PYTHON_INSTALL_ARGS_$(cdbs_curpkg))
-endif
-
-$(patsubst %,install/%,$(DEB_PYTHON_SIMPLE_PACKAGES)) :: install/% :
-	cd $(DEB_SRCDIR) && python $(DEB_PYTHON_SETUP_CMD) install --root=$(CURDIR)/debian/$(cdbs_curpkg) $(DEB_PYTHON_INSTALL_ARGS_ALL) $(DEB_PYTHON_INSTALL_ARGS_$(cdbs_curpkg))
-
-# This class can optionally utilize debhelper's "dh_python" command.  Just
-# be sure you include debhelper.mk before including this file.
-ifdef _cdbs_rules_debhelper
-
-DEB_DH_PYTHON_ARGS = $(addprefix -V ,$(DEB_PYTHON_COMPILE_VERSION)) $(DEB_DH_PYTHON_ARGS_ALL) $(DEB_DH_PYTHON_ARGS_$(cdbs_curpkg))
-
-$(patsubst %,binary-install/%,$(DEB_PACKAGES)) :: binary-install/%: binary-install-python:/%
-$(patsubst %,binary-install-python/%,$(DEB_PACKAGES)) :: binary-install-python:/%
-	dh_python -p$(cdbs_curpkg) $(DEB_DH_PYTHON_ARGS)
-endif
-
-
-# Ignore errors from this rule.  In a tarball build, the file may not
-# exist.
-ifeq (,$(DEB_PYTHON_REAL_LIB_PACKAGES))
-clean::
-	-python$(DEB_PYTHON_COMPILE_VERSION) $(DEB_PYTHON_SETUP_CMD) clean $(DEB_PYTHON_CLEAN_ARGS)
-else
-clean:: $(patsubst %,python-cleanbuilddir/%,$(DEB_PYTHON_REAL_LIB_PACKAGES))
-
-$(patsubst %,python-cleanbuilddir/%,$(DEB_PYTHON_REAL_LIB_PACKAGES)) :: python-cleanbuilddir/% : 
-	-python$(cdbs_python_ver) $(DEB_PYTHON_SETUP_CMD) clean $(DEB_PYTHON_CLEAN_ARGS)
-endif
-
-else
-########################## new policy methods ###########################
 
 # Calculate cdbs_python_build_versions
 cdbs_python_module_arch := $(strip $(shell perl -e '$$/=""; $$_=(grep {/^Package: $(DEB_PYTHON_MODULE_PACKAGE)$$/m;} (<>))[0]; /^Architecture: (.*)$$/m && print $$1' debian/control))
@@ -261,11 +165,6 @@ ifeq (, $(cdbs_selected_pycompat))
 	echo "$(cdbs_pycompat)" >debian/pycompat
 endif # use pycompat
 	rm -f python-build-stamp-*
-
-endif
-
-
-########################## all policy methods ###########################
 
 # Calling setup.py clean may create .pyc files, so we need a final cleanup
 # pass here.
