@@ -14,6 +14,11 @@ cdbs (0.4.53) UNRELEASED; urgency=low
     - Add new option DEB_DH_PREP. At levels <= 7 "dh_clean -k" is used
       by default, at newer levels "dh_prep" is used
     - Support level 7 in CDBS_BUILD_DEPENDS
+  * Drop support for Python policy v1 from python-distutils.mk.
+    - Drop code handling python policy v1
+    - Strip no longer supported options DEB_PYTHON_COMPILE_VERSION and
+      DEB_PYTHON_PACKAGES_EXCLUDE from documentation
+    - Add NEWS entry about the change
 
   [ Peter Eisentraut ]
   * Added CHANGELOG to list of detected changelog file names (debhelper.mk) 
